fixed overflow on views

--- a/client/index.scss
+++ b/client/index.scss
@@ -65,3 +65,7 @@ img {
   border-top: 1px solid #8c8b8b;
   margin-left: 0px;
 }
+
+#app {
+  max-width: 100vw;
+}
